--- a/src/styles/additional_home.css
+++ b/src/styles/additional_home.css
@@ -14,6 +14,7 @@
 
 #tw-icon{
     margin-top: 2.0rem;
+    margin-left:1.0rem;
     color:#222222;
     transition: color 0.7s;
 }
@@ -24,6 +25,7 @@
 
 #gh-icon{
     margin-top: 2.0rem;
+    margin-left:1.0rem;
     color:#222222;
     transition: color 0.7s;
 }
